website: RU - add 15.0R to ru/releases pages
Reviewed by: andy, marck
Differential Revision: https://reviews.freebsd.org/D54034

--- a/website/content/ru/portmgr/policies_eol.adoc
+++ b/website/content/ru/portmgr/policies_eol.adoc
@@ -5,12 +5,6 @@ sidenav: about
 
 include::shared/en/urls.adoc[]
 
-//
-// The FreeBSD Russian Documentation Project
-//
-// Original EN revision (07.10.2025): cf578185a495dcf7d94f0317c6e046a394e67086
-//
-
 = Порты и пакеты для поддерживаемых выпусков
 
 Поддержка выпусков FreeBSD со стороны портов и инфраструктуры портов в настоящее время соответствует link:../../security/#sup[политикам, установленным офицером по информационной безопасности FreeBSD].
@@ -57,6 +51,14 @@ include::shared/en/urls.adoc[]
 * FreeBSD:14:powerpc64le (обновляется только поквартально)
 
 |30 июня 2026 г.
+
+| stable/15 | н/д | releng/15.0 | | 31 декабря 2029 г.
+| releng/15.0 | 15.0-RELEASE | releng/15.0 a|
+* FreeBSD:15:aarch64
+* FreeBSD:15:amd64
+* FreeBSD:15:armv7
+
+| 30 сентября 2026 г.
 |main |н/д |main a|
 * FreeBSD:16:aarch64
 * FreeBSD:16:amd64
@@ -68,3 +70,10 @@ include::shared/en/urls.adoc[]
 
 Старые выпуски не поддерживаются; порты и пакеты могут не устанавливаться или не работать.
 Пользователям настоятельно рекомендуется обновиться до одного из упомянутых выше поддерживаемых выпусков.
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (07.10.2025): cf578185a495dcf7d94f0317c6e046a394e67086
+//
+
