--- a/website/content/ru/releases/15.0R/_index.adoc
+++ b/website/content/ru/releases/15.0R/_index.adoc
@@ -16,12 +16,9 @@ sidenav: download
 
 == Подробная информация
 
-Более подробная информация
-//, такая как информация о релизе
-// и информация об аппаратной совместимости,
-доступна на этих страницах:
+Более подробная информация, такая как информация о релизе и информация об аппаратной совместимости, доступна на этих страницах:
 
-//link:announce/[Анонс FreeBSD {localRel}-RELEASE] +
+link:announce/[Анонс FreeBSD {localRel}-RELEASE] +
 link:signatures/[Подписанные контрольные суммы FreeBSD {localRel}-RELEASE] +
 link:installation/[Замечания по установке FreeBSD {localRel}-RELEASE] +
 link:hardware/[Информация об аппаратной совместимости FreeBSD {localRel}-RELEASE] +
@@ -33,5 +30,5 @@ link:schedule/[План выпуска FreeBSD {localRel}-RELEASE]
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (21.06.2025): 76f5a5635a23c24c5f4a1031b54f429e9a2a6f3d
+// Original EN revision (29.11.2025): 4b6a7a1cbb717983adf561aa857adbd6b82ffd83
 //
