--- a/website/content/ru/releases/15.0R/errata.adoc
+++ b/website/content/ru/releases/15.0R/errata.adoc
@@ -32,11 +32,11 @@ sidenav: download
 Перед установкой этой версии важно ознакомиться с этим документом, чтобы узнать о любых обнаруженных после выпуска проблемах, которые, возможно, уже были найдены и исправлены.
 
 Любая версия этого документа исправлений и дополнений, фактически распространяемая с выпуском (например, на диске CDROM), по определению будет устаревшей, но другие копии поддерживаются в актуальном состоянии в Интернете и должны рассматриваться как «текущие исправления» для этого выпуска.
-Эти другие копии исправлений находятся по адресу https://www.FreeBSD.org/releases/, а также на любых сайтах, которые поддерживают актуальные зеркала этого расположения.
+Эти другие копии исправлений находятся по адресу https://www.FreeBSD.org/ru/releases/, а также на любых сайтах, которые поддерживают актуальные зеркала этого расположения.
 
 Исходные и бинарные промежуточные сборки FreeBSD {releaseBranch} также содержат актуальные копии этого документа (на момент создания промежуточной сборки).
 
-Список всех рекомендаций по безопасности FreeBSD CERT доступен по адресу https://www.FreeBSD.org/security/.
+Список всех рекомендаций по безопасности FreeBSD CERT доступен по адресу https://www.FreeBSD.org/ru/security/.
 
 [[security]]
 == Бюллетени безопасности
