--- a/website/content/ru/releases/15.0R/installation.adoc
+++ b/website/content/ru/releases/15.0R/installation.adoc
@@ -40,10 +40,7 @@ include::shared/ru/urls.adoc[]
 [[upgrade-binary]]
 == Обновление с помощью "FreeBSD Update"
 
-ПРИМЕЧАНИЕ: FreeBSD Update, вероятно, не будет существовать в {releaseCurrent}!
-Текст ниже является шаблоном из предыдущих выпусков и должен быть заменён инструкциями по использованию pkgbase после их окончательной доработки.
-
-Утилита man:freebsd-update[8] поддерживает бинарные обновления систем amd64, arm64 и i386, работающих под более ранними выпусками FreeBSD.
+Утилита man:freebsd-update[8] поддерживает бинарные обновления систем amd64 и arm64, работающих под более ранними выпусками FreeBSD.
 Системы, работающие под {releasePrev}, могут обновиться следующим образом:
 
 [.screen]
@@ -51,6 +48,11 @@ include::shared/ru/urls.adoc[]
 # freebsd-update fetch
 # freebsd-update install
 ----
+
+[IMPORTANT]
+====
+Этот шаг является обязательным, так как обновление до {releaseCurrent} без применения исправлений и дополнений FreeBSD-EN-25:18.freebsd-update приведет к неработоспособности системы!
+====
 
 Теперь утилита man:freebsd-update[8] может получать компоненты, принадлежащие {releaseCurrent}.
 В ходе этого процесса man:freebsd-update[8] попросит помощи в слиянии конфигурационных файлов.
@@ -94,5 +96,5 @@ include::shared/ru/urls.adoc[]
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (14.04.2025): c7bfa0181953097b53707c654d544e62f0c5665b
+// Original EN revision (28.11.2025): 18ab7220ad502f14f5590a4ebd23c4dcaec633f1
 //
