--- a/website/content/ru/releases/15.0R/readme.adoc
+++ b/website/content/ru/releases/15.0R/readme.adoc
@@ -35,7 +35,7 @@ include::shared/ru/mailing-lists.adoc[]
 [[about]]
 == О FreeBSD
 
-FreeBSD — это операционная система с открытым исходным кодом, происходящая от 4.4 BSD Lite2 для 64-битного аппаратного обеспечения ПК на базе x86 (amd64), 32-битного аппаратного обеспечения ПК на базе x86 (i386), 64-битных систем Arm(R) ARMv8-A AArch64 (aarch64), 32-битных систем Arm(R) ARMv6/7 (armv6/7), систем PowerPC(R) (powerpc, powerpc64) и систем RISC-V (riscv64).
+FreeBSD — это операционная система с открытым исходным кодом, происходящая от 4.4 BSD Lite2, для 64-разрядного аппаратного обеспечения ПК на базе x86 (amd64), 64-разрядных систем Arm(R) ARMv8-A AArch64 (aarch64), 32-разрядных систем Arm(R) ARMv6/7 (armv6/7), 64-разрядных систем PowerPC(R) (powerpc, powerpc64) и 64-разрядных систем RISC-V (riscv64).
 
 FreeBSD работает с широким спектром периферийных устройств и конфигураций и может использоваться для всего: от разработки программного обеспечения до игр и предоставления интернет-услуг.
 
@@ -120,7 +120,7 @@ link:https://bugs.freebsd.org/search/[Список всех активных PR]
 *Примечание*: +
 Чтобы узнать о любых последних новостях или проблемах после выпуска, чрезвычайно важно прочитать исправления для любого данного выпуска перед его установкой.
 Файл исправлений, сопровождающий каждый выпуск (скорее всего, прямо рядом с этим файлом), по определению уже устарел, но другие копии поддерживаются в актуальном состоянии в Интернете и должны рассматриваться как текущие исправления для этого выпуска.
-Эти другие копии исправлений расположены по адресу link:../../releases/[https://www.FreeBSD.org/releases] (а также на любых сайтах, которые поддерживают актуальные зеркала этого расположения).
+Эти другие копии исправлений расположены по адресу link:../../releases/[https://www.FreeBSD.org/ru/releases] (а также на любых сайтах, которые поддерживают актуальные зеркала этого расположения).
 
 [[manpages]]
 === Страницы Справочника
@@ -158,5 +158,5 @@ FreeBSD представляет собой совокупную работу м
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (14.04.2025): ed4f354d57860c84bf8be21fd5a9f78c08ce2a24
+// Original EN revision (28.11.2025): e7f0307646d76227509e74f49a9159ea3a496328
 //
