--- a/website/content/ru/releases/_index.adoc
+++ b/website/content/ru/releases/_index.adoc
@@ -25,6 +25,8 @@ image:../../gifs/releases.jpg[Релизы FreeBSD,width=300,height=200]
 
 === Продуктивные релизы
 
+* *Релиз {rel150-current}* (2 декабря 2025) _link:15.0R/announce/[Анонс] : link:15.0R/relnotes/[Информация о релизе] : link:15.0R/installation/[Замечания по установке] : link:15.0R/hardware/[Информация об аппаратной совместимости] : link:15.0R/readme/[Readme] : link:15.0R/errata/[Исправления и дополнения] : link:15.0R/signatures/[Подписанные контрольные суммы]_
+
 * *Релиз {rel143-current}* ({rel143-current-date}) _link:{u-rel143-announce}[Анонс] : link:{u-rel143-notes}[Информация о релизе] : link:{u-rel143-installation}[Замечания по установке] : link:{u-rel143-hardware}[Информация об аппаратной совместимости] : link:{u-rel143-readme}[Readme] : link:{u-rel143-errata}[Исправления и дополнения] : link:{u-rel143-signatures}[Подписанные контрольные суммы]_
 
 === Старые продуктивные релизы
@@ -133,5 +135,5 @@ image:../../gifs/releases.jpg[Релизы FreeBSD,width=300,height=200]
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (01.10.2025): e32b4e7ef20a964e2fe2c46503ea834a8b1b6f08
+// Original EN revision (29.11.2025): 4b6a7a1cbb717983adf561aa857adbd6b82ffd83
 //
