--- a/website/content/ru/security/_index.adoc
+++ b/website/content/ru/security/_index.adoc
@@ -103,6 +103,8 @@ link:unsupported[Более старые выпуски] не поддержив
 [cols=",,,",options="header",]
 |===
 |Ветка |Релиз |Дата релиза |Ожидаемый EoL (конец срока службы)
+|stable/15 |н/д |н/д |31 декабря 2029
+|releng/15.0 |15.0-RELEASE | 2 декабря 2025 |30 сентября 2026
 |stable/14 |н/д |н/д |30 ноября 2028 г.
 |releng/14.3 |14.3-RELEASE |10 июня 2025 г. |30 июня 2026 г.
 |stable/13 |н/д |н/д |30 апреля 2026 г.
