--- a/website/content/ru/where.adoc
+++ b/website/content/ru/where.adoc
@@ -9,12 +9,6 @@ sidenav: download
 include::shared/releases.adoc[]
 include::shared/ru/urls.adoc[]
 
-//
-// The FreeBSD Russian Documentation Project
-//
-// Original EN revision (17.10.2025): 785a0a904c9bbb30b8832f7304a80b15008d33fc
-//
-
 = Получение FreeBSD
 
 Для получения общей информации о прошлых, текущих и будущих релизах обратитесь к link:../releases/[Информации о релизах].
@@ -44,6 +38,57 @@ include::shared/ru/urls.adoc[]
 == Качество промышленной эксплуатации
 
 Релизные (`RELEASE`) версии FreeBSD являются конечным результатом _подготовки релизов_ и рекомендуются для большинства пользователей.
+
+[[download-rel150]]
+=== FreeBSD {rel150-current}-RELEASE
+
+[.tblbasic]
+[.tblDownload]
+[width="100%",cols="25%,25%,25%,25%",options="header",]
+|===
+|Установщик |Виртуальная машина |SD-карта |Документация
+a|
+* link:{url-rel}/amd64/amd64/ISO-IMAGES/{rel150-current}/[amd64]
+* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel150-current}/[aarch64]
+* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel150-current}/[armv7]
+* link:{url-rel}/powerpc/powerpc64/ISO-IMAGES/{rel150-current}/[powerpc64]
+* link:{url-rel}/powerpc/powerpc64le/ISO-IMAGES/{rel150-current}/[powerpc64le]
+* link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel150-current}/[riscv64]
+
+a|
+* link:{url-rel}/VM-IMAGES/README.txt[Readme]
+* link:{url-rel}/VM-IMAGES/{rel150-current}-RELEASE/amd64/Latest/[amd64]
+* link:{url-rel}/VM-IMAGES/{rel150-current}-RELEASE/aarch64/Latest/[aarch64]
+* link:{url-rel}/VM-IMAGES/{rel150-current}-RELEASE/riscv64/Latest/[riscv64]
+* link:{url-rel}/CI-IMAGES/{rel150-current}-RELEASE/amd64/Latest/[amd64] (BASIC-CI)
+* link:{url-rel}/CI-IMAGES/{rel150-current}-RELEASE/aarch64/Latest/[aarch64] (BASIC-CI)
+
+a|
+* aarch64
+* {blank}
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel150-current}/[PINE64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel150-current}/[PINE64-LTS]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel150-current}/[ROCK64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel150-current}/[ROCKPRO64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel150-current}/[RPI] (3/4)
+* armv7
+* {blank}
+** link:{url-rel}/arm/armv7/ISO-IMAGES/{rel150-current}/[GENERICSD]
+* riscv64
+* {blank}
+** link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel150-current}/[GENERICSD]
+
+a|
+* {blank}
+* link:../releases/#current[Релиз]: 2 декабря 2025
+* link:../releases/15.0R/relnotes[Описание релиза]
+* link:../releases/15.0R/readme[Вводная информация]
+* link:../releases/15.0R/hardware[Информация об аппаратной совместимости]
+* link:../releases/15.0R/installation[Инструкции по установке]
+* link:../releases/15.0R/errata[Неисправности]
+* link:../releases/15.0R/signatures[Заверенные контрольные суммы]
+
+|===
 
 [[download-rel143]]
 === FreeBSD {rel143-current}-RELEASE
@@ -260,3 +305,9 @@ http://ftp-archive.FreeBSD.org/pub/FreeBSD-Archive/old-releases/[Прошлые 
 image::../../gifs/fastlyLogo-red-SVG.svg[Fastly Logo,120]
 
 Обратитесь также к материалам о link:{handbook}mirrors[зеркалах проекта FreeBSD].
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (17.10.2025): 785a0a904c9bbb30b8832f7304a80b15008d33fc
+//
