--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -82,7 +82,7 @@ The recommended, and most secure approach, is using the source tree checkout of 
 # cp -R /usr/src/share/keys/pkgbase-15 /usr/share/keys/pkgbase-15
 ....
 
-Users who do not have up to date sources installed may use a less secure, but simpler approach, validating the checksums after installation. As these are architecture-independent files, the checksums will match on all platforms.
+Users who do not have up to date sources installed may use a less secure, but simpler approach, validating the checksums after installation. As these are architecture-independent files, the checksums will match on all platforms. The FreeBSD-base package repository will need to be enabled before upgrading via man:pkg[8].
 
 ....
 # pkg add -f https://pkg.freebsd.org/FreeBSD:15:$(uname -p)/base_release_0/FreeBSD-pkg-bootstrap-15.0.pkg
@@ -92,6 +92,8 @@ ab261a3b84ffc11654ac0bafbb7d6b3f1b6afc30bfabab3bcff64259678eac26 /etc/pkg/FreeBS
 036ae4f9c441a3febb41734bbb37227ec3374edd3c6c687e5cb70d580efbea30 /usr/share/keys/pkg/trusted/pkg.freebsd.org.2013102301
 529c79e85a6ca152faa9d57ead85fe0111ffada8d0a0fa2f11fc510999fa50df /usr/share/keys/pkgbase-15/trusted/awskms-15
 c368ec8d05654bdaad34742c1d75b9b150bfc3892838cef32f6e5b036b0c0605 /usr/share/keys/pkgbase-15/trusted/backup-signing-15
+# mkdir -p /usr/local/etc/pkg/repos
+# echo "FreeBSD-base: { enabled: yes }" > /usr/local/etc/pkg/repos/FreeBSD.conf
 ....
 
 [IMPORTANT]
