HW Relnotes template: Add the ufintek driver

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -636,6 +636,8 @@ Marvell 88W8363 IEEE 802.11n wireless network adapters (man:mwl[4] driver)
 
 &hwlist.ucycom;
 
+&hwlist.ufintek;
+
 &hwlist.uftdi;
 
 &hwlist.umcs;
