handbook/firewalls: Properly point to freebsd-ftpd
Properly point to the ftp/freebsd-ftpd package.

Fixes:	d8631346f9 ("handbook/firewalls: Adapt blacklistd to blocklistd")

--- a/documentation/content/en/books/handbook/firewalls/_index.adoc
+++ b/documentation/content/en/books/handbook/firewalls/_index.adoc
@@ -2612,7 +2612,7 @@ Remote rules allow a stricter enforcement of limits on attempts to log in compar
 === Blocklistd Client Configuration
 
 There are a few software packages in FreeBSD that can utilize blocklistd's functionality.
-The two most prominent ones are package:freebsd-ftpd[] and man:sshd[8] to block excessive connection attempts.
+The two most prominent ones are package:ftp/freebsd-ftpd[] and man:sshd[8] to block excessive connection attempts.
 To activate blocklistd in the SSH daemon, add the following line to [.filename]#/etc/ssh/sshd_config#:
 
 [.programlisting]
@@ -2622,7 +2622,7 @@ UseBlocklist yes
 
 Restart sshd afterwards to make these changes take effect.
 
-Blocklisting for package:freebsd-ftpd[] is enabled using `-B`, either in [.filename]#/etc/inetd.conf# or as a flag in [.filename]#/etc/rc.conf# like this:
+Blocklisting for package:ftp/freebsd-ftpd[] is enabled using `-B`, either in [.filename]#/etc/inetd.conf# or as a flag in [.filename]#/etc/rc.conf# like this:
 
 [.programlisting]
 ....
