--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -1559,3 +1559,6 @@ include::{include-path}mwlucas.key[]
 
 === `{dhw}`
 include::{include-path}dhw.key[]
+
+=== `{tpearson}`
+include::{include-path}tpearson.key[]
