--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3447,6 +3447,10 @@
 :tota-email: tota@FreeBSD.org
 :tota: {tota-name} <{tota-email}>
 
+:tpearson-name: Timothy Pearson
+:tpearson-email: tpearson@FreeBSD.org
+:tpearson: {tpearson-name} <{tpearson-email}>
+
 :trasz-name: Edward Tomasz Napierała
 :trasz-email: trasz@FreeBSD.org
 :trasz: {trasz-name} <{trasz-email}>
