Update glossary.adoc - link to KSE
The current link (http://www.freebsd.org/kse) has been 404'ed for many years. This seems to be the correct link now (has the same text as the last wayback machine archive): https://people.freebsd.org/~kuriyama/www/kse/

--- a/documentation/content/en/books/handbook/glossary.adoc
+++ b/documentation/content/en/books/handbook/glossary.adoc
@@ -497,7 +497,7 @@ A method of dynamically loading functionality into a FreeBSD kernel without rebo
 [[kse-glossary]]
 Kernel Scheduler Entities::
 A kernel-supported threading system.
-See the link:http://www.freebsd.org/kse[project home page] for further details.
+See the link:https://people.freebsd.org/~kuriyama/www/kse[project home page] for further details.
 
 [[kva-glossary]]
 Kernel Virtual Address::
