phb: Add missing gitrefs for FreeBSD_version 1500038 to 1500040
Reviewed by:		ziaee
Differential Revision:	https://reviews.freebsd.org/D54068

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -256,17 +256,17 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |15.0-CURRENT after changing alloc changes to LinuxKPI.
 
 |1500038
-|gitref:[repository="src",length=12]
+|gitref:b7527823fdcc29f0da9c17152dbb062eeb18244d[repository="src",length=12]
 |April 19, 2025
 |15.0-CURRENT after removal of vm_page_next() and _prev.
 
 |1500039
-|gitref:[repository="src",length=12]
+|gitref:d609c5733b00151c1236618d8be472790f765947[repository="src",length=12]
 |May 4, 2025
 |15.0-CURRENT after introducing a properly typed jiffies.
 
 |1500040
-|gitref:[repository="src",length=12]
+|gitref:22d4fecbcf576fb799686972e3de7fc78938fe6a[repository="src",length=12]
 |May 4, 2025
 |15.0-CURRENT after the internal API between the nfscommon and nfscl modules changed.
 
