website: move tcberner to the portmgr alumni
Hat:	portmgr

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3814,7 +3814,7 @@
 :pkgmgr-members: {antoine}, {bdrewery}
 
 // FreeBSD Ports Manager Team
-:portmgr-members: {mat}, {bapt}, {pizzamig}, {rene}, {tcberner}, {dvl}
+:portmgr-members: {mat}, {bapt}, {pizzamig}, {rene}, {dvl}
 
 // FreeBSD Release Engineering Teams
 :re: re@FreeBSD.org
