--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -89,7 +89,6 @@ The https://www.freebsd.org/portmgr/charter/[portmgr team charter] describes the
 * {mat} (Cluster Administration Team Liaison)
 * {pizzamig}
 * {rene}
-* {tcberner} (Secretary)
 * {dvl}
 
 '''
@@ -200,7 +199,7 @@ There is currently no Documentation Engineering Team Secretary appointed; emails
 The FreeBSD Ports Management Team Secretary is a non-voting member of the Ports Management Team, responsible for documenting the work done by portmgr, keeping track of voting procedures, and to be an interface to the other teams, especially the admin and Core teams.
 The Ports Management Team Secretary is also responsible for writing and sending out monthly status reports to the FreeBSD Developer community, containing a summary of portmgr's latest decisions and actions.
 
-* {tcberner}
+* (vacant)
 
 [[t-srctmgr-secretary]]
 == Source Management Team Secretary <srcmgr-secretary@FreeBSD.org>
