website: RU - sync ru/community pages
Reviewed by: andy, marck
Differential Revision: https://reviews.freebsd.org/D54058

--- a/website/content/ru/community/_index.adoc
+++ b/website/content/ru/community/_index.adoc
@@ -7,8 +7,38 @@ include::shared/ru/urls.adoc[]
 
 = Сообщество FreeBSD
 
-FreeBSD достаточно хорошо поддерживается своим активным сообществом.
+Сообщество FreeBSD разнообразно и обширно, его можно найти везде, где происходят содержательные беседы и активность.
+Вы найдете наше сообщество и пространства интеллектуальными, гостеприимными и доступными.
 
-Существует больше сотни link:mailinglists[списков рассылки], десятки web http://forums.FreeBSD.org/[форумов] и несколько link:newsgroups[телеконференций]. Более {{< get-usergroups-info "usergroups" >}} link:../usergroups[групп пользователей] в {{< get-usergroups-info "countries" >}} странах по всему миру. Также есть активное link:irc[IRC] сообщество. Многие разработчики также ведут http://planet.freebsdish.org[блоги] о своей работе над FreeBSD. Также разработчики и ключевые контрибьюторы используют http://wiki.FreeBSD.org/[wiki], в которой содержится информация о разработке FreeBSD и имеющих к ней отношение проектов. Вы можете найти FreeBSD, представленную в целом ряде различных link:social[социальных сетей].
+Проект поддерживает несколько официальных сообществ, где разработчики, участники и пользователи могут найти помощь и поддержку, быть в курсе событий, координировать действия и сотрудничать или просто расслабиться и пообщаться.
 
-В прошлом году было проведено {{< get-event-last-year-info "events" >}} событий, посвященных FreeBSD, в {{< get-event-last-year-info "countries" >}} различных странах по всему миру. link:../events/events.ics[Календарь] и link:../events/feed.xml[лента RSS] предстоящих событий, имеющих отношение к FreeBSD, доступны на нашей link:../events/[странице событий]. В YouTube выложены десятки видео с прошлых событий на канале http://www.youtube.com/bsdconferences[BSD Conferences].
+Если вы предпочитаете асинхронные и долгоживущие каналы связи, FreeBSD предлагает более ста https://lists.freebsd.org[списков рассылки], охватывающих огромный круг тем, а также предоставляет веб-https://forums.freebsd.org/[форумы] и несколько групп link:{handbook}eresources/#eresources-news[Usenet].
+
+Для более оперативного взаимодействия у нас есть ряд https://wiki.freebsd.org/IRC/[IRC-каналов FreeBSD], где вы можете найти поддержку, научиться делать свой вклад и многое другое.
+
+Если вас интересуют возможности профессионального развития и нетворкинга, то подпишитесь на нас в https://www.linkedin.com/company/freebsd/[LinkedIn] и присоединитесь к нашей официальной https://www.linkedin.com/groups/47628[группе FreeBSD в LinkedIn].
+
+Что касается регулярных очных и онлайн-встреч, вам может быть интересно ознакомиться с нашими https://www.freebsd.org/events[мероприятиями FreeBSD], где мы ведем ленту и календарь предстоящих событий.
+В прошлом году по всему миру прошло {{< get-event-last-year-info "events" >}} мероприятий.
+////
+В прошлом году по всему миру прошло {{< get-event-last-year-info "events" >}} мероприятий в {{< get-event-last-year-info "countries" >}} разных странах.
+////
+
+Помимо официальных сообществ, существует множество https://www.freebsd.org/usergroups/[групп пользователей], а также highly активные сообщества FreeBSD на link:https://www.reddit.com/r/freebsd/[Reddit], https://wiki.freebsd.org/Discord[Discord], https://stackoverflow.com/questions/tagged/freebsd[StackOverflow], https://serverfault.com/questions/tagged/freebsd[ServerFault] и https://www.meetup.com/topics/freebsd/[MeetUp.com], среди многих других технологически ориентированных пространств.
+
+На https://wiki.freebsd.org/[вики FreeBSD] содержится информация о разработке и связанных проектах.
+
+== Видеоконтент
+
+На YouTube мы ведем два официальных канала. На основном link:https://youtube.com/FreeBSDProject[канале FreeBSD] вы найдете технический контент, а на канале link:https://youtube.com/@FreeBSDMeetings[FreeBSD Meetings] — живые презентации, конференции и встречи рабочих групп.
+
+Вам кажется, что вам здесь не место?
+FreeBSD — это система, созданная по частям добровольцами из всех слоев общества.
+Если вы видите что-то, что, по вашему мнению, можно улучшить, мы ждем от вас патч, отчет о проблеме или письмо.
+Здесь есть место для каждого, кто хочет помочь, и многие из нас нашли в этом огромный вызов и смысл.
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (02.11.2025): e72d22f9f0e0dfeaa9449a459f8d8ea8c841a38b
+//
