--- a/website/content/ru/community/irc.adoc
+++ b/website/content/ru/community/irc.adoc
@@ -7,4 +7,11 @@ include::shared/ru/urls.adoc[]
 
 = IRC
 
-Хотя каналы #freebsd имеются в различных сетях IRC, проект FreeBSD не управляет ими и не считает IRC средством получения помощи. Когда вы задаёте вопрос на любом из каналов IRC, вас могут проигнорировать, оскорбить и даже вышвырнуть прочь, хотя вам может больше повезти на каналах #freebsdhelp там, где они есть. Список известных каналов IRC, имеющих отношение к FreeBSD, доступен в FreeBSD http://wiki.freebsd.org/IrcChannels[wiki]. Если вы хотите попробовать эти либо другие каналы на IRC, делайте это на свой страх и риск, жалобы на поведение на этих каналах не нужно направлять в адрес проекта FreeBSD. Для получения подробной информации обратитесь также к link:{faq}#IRC[FAQ].
+FreeBSD официально поддерживает присутствие в IRC с множеством каналов, охватывающих темы и вопросы от общей поддержки до вклада в развитие и разработку.
+Многие команды проекта имеют выделенные каналы, где они планируют и координируют работу, так что если у вас есть особая область интересов или вы просто хотите провести время и поучиться, ознакомьтесь с нашей https://wiki.freebsd.org/IRC/Channels[вики-страницей] для получения дополнительной информации о наших https://wiki.freebsd.org/IRC[каналах IRC FreeBSD].
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (19.06.2021): 8e22e76d94dc5fef83abcb3c082ab4242ef90ba2
+//
