--- a/website/content/ru/community/mailinglists.adoc
+++ b/website/content/ru/community/mailinglists.adoc
@@ -3,43 +3,47 @@ title: "Списки рассылки"
 sidenav: community
 ---
 
+include::shared/en/mailing-lists.adoc[]
 include::shared/ru/urls.adoc[]
 
 = Списки рассылки
 
 Списки рассылки являются основными коммуникационными каналами для сообщества FreeBSD и охватывают множество тем.
 
+- https://lists.freebsd.org/[]
+- link:{mailing-list-faq}[Часто задаваемые вопросы].
+
 == Архивы списков рассылки
 
-Вы можете link:../../search/#mailinglists[выполнить поиск] или http://www.FreeBSD.org/mail/[просмотреть] архивы списков рассылки на сервере http://www.FreeBSD.org/[www.FreeBSD.org]. Возможен также http://lists.freebsd.org/mailman/listinfo[просмотр] списков рассылки через Web-интерфейс Mailman.
+https://mail-archive.freebsd.org/mail/[Тематические архивы] со всеми электронными письмами с 1994 года доступны по адресу https://mail-archive.freebsd.org/mail/
 
-== Англоязычные списки рассылки
+Просмотр:
 
-Англоязычные списки рассылки link:{handbook}#ERESOURCES-MAIL[представлены в руководстве пользователя FreeBSD].
+- https://lists.freebsd.org/archives/[]
 
-== Неанглоязычные списки рассылки
+Поиск:
 
-Существуют также несколько неанглоязычных списков рассылки:
+- https://lists.freebsd.org/search[]
 
-* *бразильский португальский* -- freebsd-subscribe@fug.com.br или http://www.fug.com.br/[WWW].
-* *упрощённый китайский* -- http://lists.cn.FreeBSD.org/mailman/listinfo[WWW], кодировка GB2312.
-* *чешский* -- users-l-request@FreeBSD.cz или http://www.cz.FreeBSD.org/listserv/listinfo/users-l/[WWW].
-* *немецкий* -- http://www.freebsd.de/mailinglists.html[Управление] или http://www.freebsd.de[Поиск].
-* *французский* -- listserver@FreeBSD-fr.org или http://www.FreeBSD-fr.org/[WWW].
-* *венгерский* -- bsd@lista.bsd.hu, http://lista.bsd.hu/[Управление] или http://datacast.hu/pipermail/bsd/[Поиск].
-* *индонезийский* -- id-freebsd-subscribe@egroups.com
-* *итальянский* -- mailman-owner@gufi.org или http://liste.gufi.org/[WWW].
-* *японский* -- freebsd-users-jp@FreeBSD.org или http://lists.freebsd.org/mailman/listinfo/freebsd-users-jp[WWW].
-* *корейский* -- majordomo@kr.FreeBSD.org или http://www.kr.FreeBSD.org/support.shtml#mailing-list[WWW].
-* *латвийский* -- bsd-owner@lists.bsd.lv или http://lists.bsd.lv/[WWW].
-* *голландский* -- majordomo@nl.FreeBSD.org.
-* *норвежский* -- bsd@nobug.no или http://www.nobug.no/[WWW].
-* *польский* -- majordomo@bsdguru.org или http://www.bsdguru.org/indeX.php?f=1080001[WWW].
-* *португальский* -- freebsd@npf.pt.freebsd.org или http://npf.pt.freebsd.org/mailman/listinfo/freebsd[WWW].
-* *русский* -- majordomo@uafug.org.ua или http://uafug.org.ua/[WWW].
-* *словацкий* -- majordomo@sk.FreeBSD.org
-* *испанский* -- https://listas.es.FreeBSD.org/mailman/listinfo[WWW].
-* *шведский* -- bus@stacken.kth.se или https://lists.stacken.kth.se/mailman/listinfo/bus[WWW].
-* *турецкий* -- freebsd@lists.enderunix.org или http://lists.enderunix.org[WWW].
+Архивы до мая 2021 года находятся https://lists.freebsd.org/pipermail/[в отдельной области].
+
+
+
+== Неанглоязычные рассылки
+
+* *Бразильский португальский* — freebsd-subscribe@fug.com.br или http://www.fug.com.br/[WWW].
+* *Чешский* — users-l-request@FreeBSD.cz или http://www.cz.FreeBSD.org/listserv/listinfo/users-l/[WWW].
+* *Венгерский* — bsd@lista.bsd.hu, http://lista.bsd.hu/[администрирование] или http://datacast.hu/pipermail/bsd/[поиск].
+* *Итальянский* — mailman-owner@gufi.org или http://liste.gufi.org/[WWW].
+* *Японский* — freebsd-users-jp@FreeBSD.org или https://lists.freebsd.org/subscription/freebsd-users-jp[WWW].
+* *Норвежский* — bsd@nobug.no или http://www.nobug.no/[WWW].
+* *Шведский* — bus@stacken.kth.se или https://lists.stacken.kth.se/mailman/listinfo/bus[WWW].
+
 
 Если вы создали список рассылки, посвящённый FreeBSD, link:../../mailto/[дайте нам знать].
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (31.03.2024): 61878f54429a46392339981118df665663625441
+//
